add figqro e cloudinary gems

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,3 +2,12 @@
  * CSS code specific to home page
  * (margin/padding adjustments)
  * ------------------------------------- */
+//
+.container {
+  background: #DBE4EE;
+}
+
+.foot {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
