--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,29 @@
-<div class="container">
-  <p>Find me in app/views/pages/home.html</p>
-  <div class="card text-center">
-    <img id="apod_img_id" width="800px" height="500px"/>
+
+<div class="banner" style="background: linear-gradient(-225deg, rgba(0,101,168,0.2) 0%, rgba(0,36,61,0.2) 50%), url(<%= cl_image_path "homejpg_960_qewms1.jpg", quality: "auto" %>);">
+  <div class="banner-content">
+    <div class="affiche">
+      <h1>Pick a date and find the relative APOD !</h1>
+    </div>
+    <form class="form-picture" action=<%= apods_path %>>
+      <div class="form-getdate">
+        <Label>Date</Label>
+        <input type="text" class="form-control datepicker input-sm" data-provide='datepicker' data-date-format='yyyy-mm-dd' name="gotdate" placeholder="pick a date">
+      </div>
+      <div class="form-search">
+        <button type="submit" class="btn btn-success btn-lg">Search</button>
+      </div>
+    </form>
   </div>
 
-  <div class="foot text-center">
-    <%= link_to "Go to photo List", apods_path, class: "btn btn-primary" %>
-  </div>
 </div>
+
+<!-- <img id="apod_img_id" width="800px" height="500px"/> -->
+
+<% content_for(:after_js) do %>
+  <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/js/bootstrap-datepicker.min.js" %>
+  <script type="text/javascript">
+    $(document).ready(function() {
+      $('.datepicker').datepicker();
+    });
+  </script>
+<% end %>
