--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,8 +14,9 @@
       </div>
     </form>
   </div>
-
 </div>
+
+<%= render 'shared/footer' %>
 
 <!-- <img id="apod_img_id" width="800px" height="500px"/> -->
 
